--- a/config-example.json
+++ b/config-example.json
@@ -5,90 +5,36 @@
     "info" : [
         { "name" : "Mike's Shop" }
     ],
-    "devices" : [
-        {
-            "label" : "Main Dust Collector",
-            "id" : "dustcollector-1",
-            "type" : "DustCollector",
-            "prefs" : {
-                "min_run_time" : 60
+    "devices" : {
+        "triggers" : [
+            {
+                "label" : "Trigger Device 1",
+                "id" : "trigger-device-1"
             }
-        },
-        {
-            "label" : "Overhead LED",
-            "id" : "led-light-9",
-            "type" : "LEDLight",
-            "prefs" : {
-                "default_brightness" : 75
+        ],
+        "listeners" : [
+            {
+                "label" : "Listener Device 1",
+                "id" : "listener-device-1"
             }
-        },
-        {
-            "label" : "Side table LED",
-            "id" : "led-light-12",
-            "type" : "LEDLight",
-            "prefs" : {
-                "default_brightness" : 125
-            }
-        },
-        {
-            "label" : "Saw Button LED",
-            "id" : "rgb-light-7",
-            "type" : "RGBLight",
-            "prefs" : {
-                "default_on_color" : "25,15,2",
-                "default_off_color" : "35,12,9",
-                "default_spin_down_color" : "42,63,77"
-            }
-        },
-        {
-            "label" : "Table Saw Toggle Button",
-            "id" : "toggle-button-3",
-            "type" : "ToggleButton",
-            "prefs" : {}
-        }
-    ],
+        ]
+    },
     "tools": [
         {
-            "name" : "Table Saw",
-            "id" : "table-saw",
-            "controllers" : [
-                {
-                    "id" : "toggle-button-3",
-                    "prefs" : {}
-                }
-            ],
-            "listeners" : [
-                {
-                    "id" : "dust-colector-1",
-                    "prefs" : 
+            "name" : "Tool 1",
+            "id" : "tool-1",
+            "device_links" : {
+                "triggers" : [
                     {
-                        "spin_down_time" : 30
+                        "id" : "trigger-device-1"
                     }
-                },
-                {
-                    "id" : "led-light-9",
-                    "prefs" : 
+                ],
+                "listeners" : [
                     {
-                        "brightness" : 100
+                        "id" : "listener-device-1"
                     }
-                },
-                {
-                    "id" : "led-light-12",
-                    "prefs" : 
-                    {
-                        "brightness" : 150
-                    }
-                },
-                {
-                    "id" : "rgb-light-7",
-                    "prefs" : 
-                    {
-                        "on_color" : "25,15,2",
-                        "off_color" : "35,12,9",
-                        "spin_down_color" : "42,63,77"
-                    }
-                }
-            ]
+                ]
+            }
         }
     ]
 }
