--- a/rudi-admin/Dockerfile
+++ b/rudi-admin/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine
 
 WORKDIR /apps
 RUN npm install ws node-static
-ADD index.html /apps/
+ADD index.html /root/
 ADD server.js /apps/
 
 EXPOSE 8080
