--- a/configs/config_light_and_button.json
+++ b/configs/config_light_and_button.json
@@ -2,55 +2,44 @@
     "info" : [
         { "name" : "Mike's light and button shop" }
     ],
-    "hardware" : [
-    ],
-    "devices" : [     
+    "hardware" : [],
+    "devices" : [
         {
             "label" : "Left Miter Saw Button",
             "id" : "left-miter-saw-button",
-            "type" : "button",
+            "type" : "simple_button",
             "physical_location" : "Above miter saw on left",
-            "connection" : 
-                {
-                    "bus" : "GPIO",
-                    "address" :    
-                        { 
-                            "pin" : 22
-                        }
-                },
-            
-            "preferences" : 
-                {
-                    "broadcast" : true,
-                    "subscriptions" : [],
-                    "shutdown": 45
+            "connection" : {
+                "bus" : "GPIO",
+                "address" : { 
+                    "pin" : 22
                 }
-
+            },
+            "preferences" : {},
+            "subscriptions" : []
         },
         {
             "label" : "Miter Saw Light",
             "id" : "miter-saw-light",
             "type" : "led_light",
             "physical_location" : "light attached to pi",
-            "connection" : 
-                {
-                    "bus" : "GPIO",
-                    "address" :    
-                        { 
-                            "pin" : 21
-                        }
-                },
-            
-            "preferences" : 
-                {  
-                    "broadcast" : false,
-                    "subscriptions" : 
-                        [
-                            "left-miter-saw-button"
-                        ],
-                    "shutdown" : 300
+            "connection" : {
+                "bus" : "GPIO",
+                "address" : { 
+                    "pin" : 21
                 }
-
+            },
+            "preferences" : {
+                "auto_turn_enable" : true,
+                "auto_turn_off_duration" : 300
+            },
+            "subscriptions" : [
+                {
+                    "listen_to" : "left-miter-saw-button",
+                    "listen_for" : "BUTTON_PRESSED",
+                    "do_this" : "TURN_ON"
+                }
+            ]
         }
     ]
 }
