use simple led light in example

--- a/rudi-app/config-example.json
+++ b/rudi-app/config-example.json
@@ -23,7 +23,7 @@
         {
             "label" : "Miter Saw Light",
             "id" : "miter-saw-light",
-            "type" : "LedLight",
+            "type" : "SimpleLedLight",
             "physical_location" : "light attached to pi",
             "connection" : {
                 "bus" : "GPIO",
