use real pins in config example

--- a/rudi-app/config-example.json
+++ b/rudi-app/config-example.json
@@ -3,7 +3,7 @@
         { "name" : "Mike's light and button shop" }
     ],
     "hardware" : {
-        "use_mock_pins" : true 
+        "use_mock_pins" : false 
     },
     "devices" : [
         {
