--- a/rudi-app/Dockerfile
+++ b/rudi-app/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.10-slim-buster
+FROM python:3.10-buster
 
 WORKDIR /usr/src/app
 
 COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY . .
 
