Updated Hardware Manager

--- a/rudi-app/config_all_the_boards.json
+++ b/rudi-app/config_all_the_boards.json
@@ -5,7 +5,7 @@
     "hardware" : {
         "GPIO" : [
             {
-                "preferenses" : {
+                "preferences" : {
                     "use_mock_pins" : false 
                 }
                 
