--- a/rudi-app/requirements.txt
+++ b/rudi-app/requirements.txt
@@ -7,3 +7,8 @@ adafruit-circuitpython-servokit
 adafruit-board-toolkit
 adafruit-blinka
 adafruit-platformdetect
+adafruit-circuitpython-ads1x15
+adafruit-circuitpython-mcp230xx
+adafruit-circuitpython-pca9685
+i2c-tools
+python-smbus
