--- a/rudi-app/requirements.txt
+++ b/rudi-app/requirements.txt
@@ -10,5 +10,5 @@ adafruit-platformdetect
 adafruit-circuitpython-ads1x15
 adafruit-circuitpython-mcp230xx
 adafruit-circuitpython-pca9685
-i2c-tools
-python-smbus
+#i2c-tools not sure what this is
+#python-smbus - needs to be installed by sudo apt install python3-smbus 
